Import part of lens tree

--- a/silica.cabal
+++ b/silica.cabal
@@ -17,31 +17,47 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Silica
-  other-modules:       Silica.Internal
+  other-modules:       Optics
   -- other-extensions:    
   hs-source-dirs:      src
   default-language:    Haskell2010
   build-depends:       base >=4.10 && <4.11
+                     , ghc-proofs
 
                      , mtl
-
-                     , bifunctors
-                     , distributive
-                     , free
-                     , kan-extensions
-                     , comonad
-                     , profunctors
-                     , adjunctions
-                     , semigroupoids
-                     , semigroups
-                     , void
-                     , contravariant
-                     , pointed
-                     , tagged
                      , constraints
-                     , reflection
-
-                     , unordered-containers
                      , protolude
 
-                     , ghc-proofs
+                     , array
+                     , base
+                     , base-orphans
+                     , bifunctors
+                     , bytestring
+                     , call-stack
+                     , comonad
+                     , containers
+                     , contravariant
+                     , distributive
+                     , exceptions
+                     , filepath
+                     , free
+                     , generic-deriving
+                     , ghc-prim
+                     , hashable
+                     , kan-extensions
+                     , mtl
+                     , nats
+                     , parallel
+                     , profunctors
+                     , reflection
+                     , semigroupoids
+                     , semigroups
+                     , tagged
+                     , template-haskell
+                     , text
+                     , th-abstraction
+                     , transformers
+                     , unordered-containers
+                     , vector
+                     , void
+
