--- a/silica.cabal
+++ b/silica.cabal
@@ -16,8 +16,8 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Silica
-  other-modules:       Optics
+  exposed-modules:     Optics
+  -- other-modules:       
   -- other-extensions:    
   hs-source-dirs:      src
   default-language:    Haskell2010
